# cg_timeline

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: release.yml  releases.yml  rust.yml
addon/: __init__.py  libtimeline.dylib
crates/backend/: Cargo.toml
crates/backend/src/: clone.rs  db.rs  login.rs  main.rs  sync.rs  utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/desktop/src-plugin/: addon.py
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/src/: serde_instances.rs
crates/desktop/src-tauri/src/server/: endpoints.rs  serve.rs
crates/timeline_lib/: Cargo.toml
crates/timeline_lib/data/fixtures/: untitled.blend
crates/timeline_lib/src/: lib.rs
crates/timeline_lib/src/api/: commit_command.rs  common.rs  export_descendants_of_commit.rs  import_exchange.rs  init_command.rs  log_checkpoints_command.rs  mod.rs  new_branch_command.rs  prepare_sync.rs  restore_command.rs  switch_command.rs  test_command.rs  test_utils.rs  utils.rs
crates/timeline_lib/src/blend/: blend_file.rs  mod.rs  parse_print_blend.rs  utils.rs
crates/timeline_lib/src/db/: db_ops.rs  structs.rs
crates/timeline_lib/src/exchange/: structs.rs
data/: untitled.blend  untitled_2.blend  untitled_2.blend.timeline  untitled_3.blend  untitled_3.blend.timeline
examples/: hello.rs
src/: ffi.rs  lib.rs
src/api/: blend_file_from_timeline_command.rs  common.rs  create_new_checkpoint_command.rs  delete_branch.rs  get_current_branch.rs  get_current_commit.rs  init_command.rs  list_branches_command.rs  log_checkpoints_command.rs  mod.rs  new_branch_command.rs  restore_command.rs  switch_command.rs  test_utils.rs  utils.rs
src/blend/: mod.rs  parse_print_blend.rs  utils.rs
src/db/: db_ops.rs  mod.rs  structs.rs
timeline/: __init__.py  libtimeline.dylib  test.py
