[package]
name = "timeline"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.7.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = {version = "1.0.183", features = ["derive"]}
bincode = "1.3.3"
tempfile = "3.6.0"
zstd = "0.12.3"
filetime = "0.2.22"
regex = "1.10.2"
serde_json = "1.0.108"
libc = "0.2.151"
blake2b_simd = "1.0.2"
humansize = "2.1.3"
anyhow = "1.0.79"
file-rotate = "0.7.5"
chrono = "0.4.31"

[dependencies.flate2]
version = "1.0.17"
features = ["zlib-ng-compat"]
default-features = false

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }

[lib]
crate-type=["lib", "cdylib"]
